@@ -1,11 +1,0 @@
-{% extends "base.html" %}
-{% load i18n %}
-{% block title %}Account activation{% endblock %}
-{% block content %}
-<h1>{% trans "Account activation" %}</h1>
-{% if account %}
-<p>{% blocktrans %}Thanks for signing up! Now you can <a href="/accounts/login/">log in</a> and start contributing!{% endblocktrans %}</p>
-{% else %}
-<p>{% blocktrans %}Either your activation link was incorrect, or the activation key for your account has expired; activation keys are only valid for {{ expiration_days }} days after registration.{% endblocktrans %}</p>
-{% endif %}
-{% endblock %}
