@@ -2,6 +2,7 @@
 django-profile Changelog
 ========================
 
+* Removed the django-registration dependency.
 * Added hCard information in the UserCard.
 * Code cleaned-up and commented.
 * Use of geonames.org webservice to obtain the Country and region when clicking on the Google Map.
